--- a/Frontend/result.ejs
+++ b/Frontend/result.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HS Code Prediction</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* General Styles */
@@ -103,8 +102,8 @@
 
         .prediction-info {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            flex-direction: column; /* Change to column for vertical alignment */
+            align-items: center; /* Center align items */
             padding: 10px;
             background-color: #fff;
             border-radius: 4px;
@@ -230,7 +229,7 @@
         /* Media Query for Mobile Devices */
         @media (max-width: 768px) {
             body {
-                font-size: calc(16px + 3px); /* Increase font size 
+                font-size: calc(16px + 3px); /* Increase font size */
             }
 
             .container {
